Fixing classpath problems (revert back to previous behavior) where debugging in IDE prevented proper resolution, also adding JVM arguments to suppress warnings from Hazelcast (corrupts object message stream)